--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/script.js": "/js/script.js",
     "/css/app.css": "/css/app.css",
+    "/js/formulaire.js": "/js/formulaire.js",
     "/css/style.css": "/css/style.css"
 }
